tests/blob/faulty_generic_blobs.sy
A :: blob {
    a: *a,
    b: *a,
}

start :: fn do
    A { a: 1, b: 1 }
    A { a: 1, b: "str" }
end

// error: $Mismatch
